--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio_tecnico_cypress",
+  "name": "academia_accenture2025",
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
