--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Cypress environment file
+cypress.env.json
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
